# app/app/api/app_http.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-http. DO NOT EDIT.
 // versions:
-// - protoc-gen-go-http v2.7.1
-// - protoc             v3.21.7
+// - protoc-gen-go-http v2.8.0
+// - protoc             v5.28.0
 // source: app/app/api/app.proto
 
 package api
@@ -117,7 +117,7 @@ func RegisterAppHTTPServer(s *http.Server, srv AppHTTPServer) {
 	r.GET("/api/app_server/trade_list", _App_TradeList0_HTTP_Handler(srv))
 	r.GET("/api/app_server/tran_list", _App_TranList0_HTTP_Handler(srv))
 	r.GET("/api/app_server/recommend_list", _App_RecommendList0_HTTP_Handler(srv))
-	r.GET("/api/app_server/recommend_list", _App_UserRecommend0_HTTP_Handler(srv))
+	r.GET("/api/app_server/user_recommend", _App_UserRecommend0_HTTP_Handler(srv))
 	r.POST("/api/app_server/password_change", _App_PasswordChange0_HTTP_Handler(srv))
 	r.POST("/api/app_server/withdraw", _App_Withdraw0_HTTP_Handler(srv))
 	r.POST("/api/app_server/exchange", _App_Exchange0_HTTP_Handler(srv))
@@ -756,7 +756,7 @@ func (c *AppHTTPClientImpl) AdminFee(ctx context.Context, in *AdminFeeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) AdminWithdraw(ctx context.Context, in *AdminWithdrawRequest, opts ...http.CallOption) (*AdminWithdrawReply, error) {
@@ -769,7 +769,7 @@ func (c *AppHTTPClientImpl) AdminWithdraw(ctx context.Context, in *AdminWithdraw
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) AdminWithdrawEth(ctx context.Context, in *AdminWithdrawEthRequest, opts ...http.CallOption) (*AdminWithdrawEthReply, error) {
@@ -782,7 +782,7 @@ func (c *AppHTTPClientImpl) AdminWithdrawEth(ctx context.Context, in *AdminWithd
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Buy(ctx context.Context, in *BuyRequest, opts ...http.CallOption) (*BuyReply, error) {
@@ -795,7 +795,7 @@ func (c *AppHTTPClientImpl) Buy(ctx context.Context, in *BuyRequest, opts ...htt
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) CreateAddress(ctx context.Context, in *CreateAddressRequest, opts ...http.CallOption) (*CreateAddressReply, error) {
@@ -808,7 +808,7 @@ func (c *AppHTTPClientImpl) CreateAddress(ctx context.Context, in *CreateAddress
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) DeleteBalanceReward(ctx context.Context, in *DeleteBalanceRewardRequest, opts ...http.CallOption) (*DeleteBalanceRewardReply, error) {
@@ -821,7 +821,7 @@ func (c *AppHTTPClientImpl) DeleteBalanceReward(ctx context.Context, in *DeleteB
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Deposit(ctx context.Context, in *DepositRequest, opts ...http.CallOption) (*DepositReply, error) {
@@ -834,7 +834,7 @@ func (c *AppHTTPClientImpl) Deposit(ctx context.Context, in *DepositRequest, opt
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) EthAuthorize(ctx context.Context, in *EthAuthorizeRequest, opts ...http.CallOption) (*EthAuthorizeReply, error) {
@@ -847,7 +847,7 @@ func (c *AppHTTPClientImpl) EthAuthorize(ctx context.Context, in *EthAuthorizeRe
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Exchange(ctx context.Context, in *ExchangeRequest, opts ...http.CallOption) (*ExchangeReply, error) {
@@ -860,7 +860,7 @@ func (c *AppHTTPClientImpl) Exchange(ctx context.Context, in *ExchangeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) FeeRewardList(ctx context.Context, in *FeeRewardListRequest, opts ...http.CallOption) (*FeeRewardListReply, error) {
@@ -873,7 +873,7 @@ func (c *AppHTTPClientImpl) FeeRewardList(ctx context.Context, in *FeeRewardList
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) GetTrade(ctx context.Context, in *GetTradeRequest, opts ...http.CallOption) (*GetTradeReply, error) {
@@ -886,7 +886,7 @@ func (c *AppHTTPClientImpl) GetTrade(ctx context.Context, in *GetTradeRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) PasswordChange(ctx context.Context, in *PasswordChangeRequest, opts ...http.CallOption) (*PasswordChangeReply, error) {
@@ -899,7 +899,7 @@ func (c *AppHTTPClientImpl) PasswordChange(ctx context.Context, in *PasswordChan
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendList(ctx context.Context, in *RecommendListRequest, opts ...http.CallOption) (*RecommendListReply, error) {
@@ -912,7 +912,7 @@ func (c *AppHTTPClientImpl) RecommendList(ctx context.Context, in *RecommendList
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendRewardList(ctx context.Context, in *RecommendRewardListRequest, opts ...http.CallOption) (*RecommendRewardListReply, error) {
@@ -925,7 +925,7 @@ func (c *AppHTTPClientImpl) RecommendRewardList(ctx context.Context, in *Recomme
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RecommendUpdate(ctx context.Context, in *RecommendUpdateRequest, opts ...http.CallOption) (*RecommendUpdateReply, error) {
@@ -938,7 +938,7 @@ func (c *AppHTTPClientImpl) RecommendUpdate(ctx context.Context, in *RecommendUp
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) RewardList(ctx context.Context, in *RewardListRequest, opts ...http.CallOption) (*RewardListReply, error) {
@@ -951,7 +951,7 @@ func (c *AppHTTPClientImpl) RewardList(ctx context.Context, in *RewardListReques
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) SetBalanceReward(ctx context.Context, in *SetBalanceRewardRequest, opts ...http.CallOption) (*SetBalanceRewardReply, error) {
@@ -964,7 +964,7 @@ func (c *AppHTTPClientImpl) SetBalanceReward(ctx context.Context, in *SetBalance
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TokenWithdraw(ctx context.Context, in *TokenWithdrawRequest, opts ...http.CallOption) (*TokenWithdrawReply, error) {
@@ -977,7 +977,7 @@ func (c *AppHTTPClientImpl) TokenWithdraw(ctx context.Context, in *TokenWithdraw
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Trade(ctx context.Context, in *WithdrawRequest, opts ...http.CallOption) (*WithdrawReply, error) {
@@ -990,7 +990,7 @@ func (c *AppHTTPClientImpl) Trade(ctx context.Context, in *WithdrawRequest, opts
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TradeList(ctx context.Context, in *TradeListRequest, opts ...http.CallOption) (*TradeListReply, error) {
@@ -1003,7 +1003,7 @@ func (c *AppHTTPClientImpl) TradeList(ctx context.Context, in *TradeListRequest,
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Tran(ctx context.Context, in *TranRequest, opts ...http.CallOption) (*TranReply, error) {
@@ -1016,7 +1016,7 @@ func (c *AppHTTPClientImpl) Tran(ctx context.Context, in *TranRequest, opts ...h
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) TranList(ctx context.Context, in *TranListRequest, opts ...http.CallOption) (*TranListReply, error) {
@@ -1029,7 +1029,7 @@ func (c *AppHTTPClientImpl) TranList(ctx context.Context, in *TranListRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UpdateAddress(ctx context.Context, in *UpdateAddressRequest, opts ...http.CallOption) (*UpdateAddressReply, error) {
@@ -1042,7 +1042,7 @@ func (c *AppHTTPClientImpl) UpdateAddress(ctx context.Context, in *UpdateAddress
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UserArea(ctx context.Context, in *UserAreaRequest, opts ...http.CallOption) (*UserAreaReply, error) {
@@ -1055,7 +1055,7 @@ func (c *AppHTTPClientImpl) UserArea(ctx context.Context, in *UserAreaRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UserInfo(ctx context.Context, in *UserInfoRequest, opts ...http.CallOption) (*UserInfoReply, error) {
@@ -1068,12 +1068,12 @@ func (c *AppHTTPClientImpl) UserInfo(ctx context.Context, in *UserInfoRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) UserRecommend(ctx context.Context, in *RecommendListRequest, opts ...http.CallOption) (*RecommendListReply, error) {
 	var out RecommendListReply
-	pattern := "/api/app_server/recommend_list"
+	pattern := "/api/app_server/user_recommend"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationAppUserRecommend))
 	opts = append(opts, http.PathTemplate(pattern))
@@ -1081,7 +1081,7 @@ func (c *AppHTTPClientImpl) UserRecommend(ctx context.Context, in *RecommendList
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) Withdraw(ctx context.Context, in *WithdrawRequest, opts ...http.CallOption) (*WithdrawReply, error) {
@@ -1094,7 +1094,7 @@ func (c *AppHTTPClientImpl) Withdraw(ctx context.Context, in *WithdrawRequest, o
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
 
 func (c *AppHTTPClientImpl) WithdrawList(ctx context.Context, in *WithdrawListRequest, opts ...http.CallOption) (*WithdrawListReply, error) {
@@ -1107,5 +1107,5 @@ func (c *AppHTTPClientImpl) WithdrawList(ctx context.Context, in *WithdrawListRe
 	if err != nil {
 		return nil, err
 	}
-	return &out, err
+	return &out, nil
 }
